Add back to login button for registration

--- a/frontend/src/app/registration/registration.component.html
+++ b/frontend/src/app/registration/registration.component.html
@@ -21,6 +21,7 @@
       <input type="password" formControlName="password" class="form__input" placeholder=" ">
       <label for="password" class="form__label">Пароль</label>
     </div>
-    <button type="submit" class="form__button">Войти</button>
+    <button type="submit" class="registration__button">Регистрация</button>
+    <button class="login__button" (click)="goToLogin()">Войти в существующий аккаунт</button>
   </form>
 </body>
