--- a/frontend/src/app/registration/registration.component.css
+++ b/frontend/src/app/registration/registration.component.css
@@ -18,7 +18,7 @@ body {
 }
 
 .form__input,
-.form__button {
+.login__button {
   font-family: sans-serif;
   letter-spacing: 1px;
   font-size: 16px;
@@ -58,7 +58,7 @@ body {
   border-bottom: 1px solid #8b0000;
 }
 
-.form__button, .registration__button {
+.login__button, .registration__button {
   padding: 5px 5px 5px 5px;
   margin-left: 30px;
   border: none;
@@ -75,8 +75,12 @@ body {
   padding: 7px 7px 7px 7px;
 }
 
-.form__button:focus,
-.form__button:hover {
+.login__button {
+  margin-top: 10px;
+}
+
+.login__button:focus,
+.login__button:hover {
   background-color: rgba(200, 0, 0, 50);
 }
 
