--- a/frontend/src/app/pets/pets.component.css
+++ b/frontend/src/app/pets/pets.component.css
@@ -28,7 +28,7 @@ body {
   padding-bottom: 10px;
 }
 
-.current_pet {
+.pets {
   margin-top: 100px;
   width: 350px;
   height: 400px;
@@ -40,6 +40,8 @@ body {
 }
 
 .current_pet {
+  margin-top: 10px;
+  margin-left: 10px;
   cursor: pointer;
 }
 
