--- a/frontend/src/app/pets/pets.component.html
+++ b/frontend/src/app/pets/pets.component.html
@@ -5,7 +5,7 @@
       <span>{{pet.type}} </span>
       <span> по кличке </span>
       <span>{{pet.name}} </span>
-      <span>- редактировать </span>
+      <span>- нажмите, чтобы редактировать </span>
     </div>
   </div>
 </section>
@@ -33,7 +33,7 @@
       <input type="text" [(ngModel)]="selectedPet.age" class="form__input" placeholder=" ">
       <label class="form__label">Возраст</label>
     </div>
-    <button *ngIf="selectedPet.id != -2" class="edit__button" (click)="updatePet(); reloadPage()">Редактировать</button>
+    <button *ngIf="selectedPet.id != -2" class="edit__button" (click)="updatePet();">Редактировать</button>
     <button *ngIf="selectedPet.id == -2" class="create__button" (click)="createPet(); reloadPage()">Создать</button>
     <button *ngIf="selectedPet.id != -2" class="delete__button" (click)="deletePet(); reloadPage()">Удалить</button>
     <button class="exit__button" type="button" (click)="logout(); goToLogin()">Выйти</button>
